--- a/output/team.html
+++ b/output/team.html
@@ -24,26 +24,32 @@
       <h3>Melissa Armand</h3>
       <p>Manager</p>
       <p>ID: 34</p>
-      <a href = "mailto: melissa.armand@outlook.com">Email me here!</a>
+      <a href = "mailto: melissarmand@gmail.com">Email me here!</a>
       <p>Office Number: 6</p>
     </div><div class="col-sm-4">
-        <h3>Marc Arthur Pierre-Louis</h3>
+        <h3>Ryan A</h3>
         <p>Engineer</p>
-        <p>ID: 63</p>
-        <a href = "mailto: brb@brbmi.com">Email me here!</a>
-        <a href="www.github.com/melissarmand">Link to my GitHub</a>
-      </div><div class="col-sm-4">
-        <h3>Russell Armand</h3>
-        <p>Intern</p>
-        <p>ID: 6</p>
-        <a href = "mailto: russellarmand@outlook.com">Email me here!</a>
-        <p>School: Palm Pointe</p>
-      </div><div class="col-sm-4">
-        <h3>Ryan Armand</h3>
-        <p>Intern</p>
         <p>ID: 5</p>
-        <a href = "mailto: ryanarmand@outlook.com">Email me here!</a>
-        <p>School: Palm Pointe</p>
+        <a href = "mailto: ryan@ryan.com">Email me here!</a> <br>
+        <a href="https://github.com/melissarmand">Link to my GitHub</a>
+      </div><div class="col-sm-4">
+        <h3>Russell A</h3>
+        <p>Engineer</p>
+        <p>ID: 6</p>
+        <a href = "mailto: russell@russell.com">Email me here!</a> <br>
+        <a href="https://github.com/russellarmand">Link to my GitHub</a>
+      </div><div class="col-sm-4">
+        <h3>Michelle Pierre</h3>
+        <p>Intern</p>
+        <p>ID: 23</p>
+        <a href = "mailto: michelle@michelle.com">Email me here!</a>
+        <p>School: Keiser</p>
+      </div><div class="col-sm-4">
+        <h3>Marc Pierre</h3>
+        <p>Intern</p>
+        <p>ID: 58</p>
+        <a href = "mailto: marc@marc.com">Email me here!</a>
+        <p>School: FIU</p>
       </div></div>
     </div>
     <script src = "../src/page-template.js"> </script>
